# prime-program

./: .gitignore  pyproject.toml
src/prime-program/: main.py  settings.py
