[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prime-program"
dynamic = ["version"]
description = "FZD Prime Program"
readme = "README.md"
requires-python = ">=3.12"
license = "Unlicense"
authors = [{ name = "Articate", email = "articate@gmail.com" }]

dependencies = ["disnake>=2.11.0", "pydantic-settings>=2.13.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["ruff>=0.6.9"]

[tool.hatch.version]
path = "src/prime-program/main.py"

[tool.ruff]
target-version = "py312"
line-length = 114
extend-exclude = [
  ".venv",
  ".uv-cache",
  ".ruff_cache",
  ".pytest_cache",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
